user-auth-login-signup: add material module and implement login/signup form

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,9 @@
 <app-header></app-header>
 <router-outlet></router-outlet>
+
+<div *ngIf="isLoginVisible">
+  <app-login></app-login>
+</div>
+<div *ngIf="isSignupVisible">
+  <app-signup></app-signup>
+</div>
