--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,4 +1,13 @@
-<header>
-  <a routerLink="/" id="title" class="header-title">Net-Nurture</a>
-</header>
-<p id="error-box" class="error-box"></p>
+<mat-toolbar color="primary">
+  <span>
+    <a routerLink="/" class="header-title">Net-Nurture</a>
+  </span>
+  <span class="spacer"></span>
+  <button mat-icon-button (click)="toggleLogin()">
+    <mat-icon>login</mat-icon>
+  </button>
+  <button mat-icon-button (click)="toggleSignup()">
+    <mat-icon>person_add</mat-icon>
+  </button>
+</mat-toolbar>
+<p id="error-box" class="error-box">{{ error }}</p>
