user-auth-login-signup: enhance login/signup ui

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -7,3 +7,7 @@
 <div *ngIf="isSignupVisible">
   <app-signup></app-signup>
 </div>
+
+<main
+  [ngClass]="{ 'blur-background': isLoginVisible || isSignupVisible }"
+></main>
