gmail-authorization: implement gmail auth button and initial attempt to get gmail auth

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -8,6 +8,4 @@
   <app-signup></app-signup>
 </div>
 
-<main
-  [ngClass]="{ 'blur-background': isLoginVisible || isSignupVisible }"
-></main>
+<app-google-login></app-google-login>
