gmail-authorization: enhance gmail button graphic design

--- a/frontend/src/app/auth/google-login/google-login.component.html
+++ b/frontend/src/app/auth/google-login/google-login.component.html
@@ -1,3 +1,4 @@
 <button mat-raised-button color="primary" (click)="signInWithGoogle()">
-  Login with Google
+  <mat-icon>email</mat-icon>
+  Link your Gmail
 </button>
