gmail-sending: full implementation of frontend and backend for sending automated emails at scheduled times

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -3,6 +3,7 @@
     <a routerLink="/" class="header-title">Net-Nurture</a>
   </span>
   <span class="spacer"></span>
+  <a routerLink="/gmail-send" id="gmail-send-button" class="btn hidden">Send Gmail</a>
   <button mat-icon-button (click)="toggleLogin()">
     <mat-icon>login</mat-icon>
   </button>
