--- a/frontend/src/app/components/header/header.component.css
+++ b/frontend/src/app/components/header/header.component.css
@@ -25,3 +25,19 @@ header {
 .error-box::before {
   content: "Error: ";
 }
+
+.btn {
+  border-radius: 10px;
+  text-align: center;
+  font-size: 20px;
+  color: #3c3d3f;
+  background: #ffffff;
+  border: 2px solid black;
+  padding: 10px 20px 10px 20px;
+}
+
+.btn:hover {
+  background: #3c3d3f;
+  color: #ffffff;
+  cursor: pointer;
+}
