navigation-flow: refactor login and signup form using angular routing

--- a/frontend/src/app/auth/signup/signup.component.html
+++ b/frontend/src/app/auth/signup/signup.component.html
@@ -1,28 +1,29 @@
-<div class="form-container" [ngClass]="{ visible: isVisible }">
+<div class="form-container">
   <h2>Sign Up</h2>
-  <form (ngSubmit)="onSubmit()">
+  <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
     <mat-form-field appearance="fill">
       <mat-label>Username</mat-label>
-      <input
-        matInput
-        type="text"
-        [(ngModel)]="username"
-        name="username"
-        required
-      />
+      <input matInput formControlName="username" required />
+      <mat-error *ngIf="signupForm.get('username')!.hasError('required')">
+        Username is required
+      </mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="fill">
       <mat-label>Password</mat-label>
-      <input
-        matInput
-        type="password"
-        [(ngModel)]="password"
-        name="password"
-        required
-      />
+      <input matInput type="password" formControlName="password" required />
+      <mat-error *ngIf="signupForm.get('password')!.hasError('required')">
+        Password is required
+      </mat-error>
     </mat-form-field>
 
-    <button mat-raised-button color="primary" type="submit">Sign Up</button>
+    <button
+      mat-raised-button
+      color="primary"
+      type="submit"
+      [disabled]="!signupForm.valid"
+    >
+      Sign Up
+    </button>
   </form>
 </div>
