--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,11 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
 @import "@angular/material/prebuilt-themes/azure-blue.css";
-
+@import "bootstrap/dist/css/bootstrap.css";
+@import "https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap";
+@import "https://fonts.googleapis.com/icon?family=Material+Icons";
 html,
 body {
   height: 100%;
-}
-body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: #f9f9e9 !important;
+}
+
+.bg-theme-green {
+  background-color: #11ab8f;
+}
+
+.text-theme-green {
+  color: #11ab8f;
 }
