--- a/frontend/src/app/pages/index/index.component.html
+++ b/frontend/src/app/pages/index/index.component.html
@@ -1,10 +1,3 @@
-<div class="message-container" *ngFor="let message of messages">
-  <app-message
-    class="row message align-items-center"
-    [message]="message"
-  ></app-message>
-</div>
-
 <div class="container">
   <img
     src="greenish-donut.png"
@@ -32,7 +25,7 @@
         We've all heard about enterprise-level CRM solutions, but what about one
         for individual-use? Introducing Net-Nurture.
       </p>
-      <button class="btn-custom-theme" (click)="toggleSignup()">
+      <button class="btn-custom-theme" routerLink="/signup">
         <h6><b>Get Started</b></h6>
       </button>
     </div>
