fetch-button: update icon for send button

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -20,9 +20,10 @@
         </button>
       </li>
       <li><app-google-login></app-google-login></li>
+      <li><app-gmail-fetch></app-gmail-fetch></li>
       <li>
         <button mat-raised-button color="primary" routerLink="/gmail-send">
-          <mat-icon>mail</mat-icon>
+          <mat-icon>send</mat-icon>
           Send Gmail
         </button>
       </li>
