--- a/frontend/src/app/components/contact/contact.component.css
+++ b/frontend/src/app/components/contact/contact.component.css
@@ -3,7 +3,17 @@
   padding: 0.5em 0;
   border-bottom: 1px solid rgb(0, 0, 0);
 }
-
+.contact-box {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1em;
+  padding: 2em;
+  border-radius: 20px;
+  text-align: center;
+  background-color: #ececec;
+}
 .contact-user {
   justify-content: center;
   display: flex;
