logout: create frontend log out service

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -19,6 +19,7 @@
           Login
         </button>
       </li>
+      <li><app-logout></app-logout></li>
       <li><app-google-login></app-google-login></li>
       <li><app-gmail-fetch></app-gmail-fetch></li>
       <li>
