--- a/frontend/src/app/auth/google-login/google-login.component.html
+++ b/frontend/src/app/auth/google-login/google-login.component.html
@@ -1,4 +1,10 @@
-<button mat-raised-button color="primary" (click)="signInWithGoogle()">
+<button *ngIf="email; else notLinked" mat-raised-button color="primary">
   <mat-icon>email</mat-icon>
-  Link your Gmail
+  Linked with {{ email }}
 </button>
+<ng-template #notLinked>
+  <button mat-raised-button color="primary" (click)="signInWithGoogle()">
+    <mat-icon>email</mat-icon>
+    Link your Gmail
+  </button>
+</ng-template>
