--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -20,7 +20,7 @@
         </button>
       </li>
       <li *ngIf="isLoggedIn"><app-logout></app-logout></li>
-      <li *ngIf="isLoggedIn && !isGoogleAuthenticated">
+      <li *ngIf="isLoggedIn">
         <app-google-login></app-google-login>
       </li>
       <li *ngIf="isLoggedIn && isGoogleAuthenticated">
