gmail-schedule: removal of obsolete gmail-send and change to gmail-schedule

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -27,7 +27,7 @@
         <app-gmail-fetch></app-gmail-fetch>
       </li>
       <li *ngIf="isLoggedIn && isGoogleAuthenticated">
-        <button mat-raised-button color="primary" routerLink="/gmail-send">
+        <button mat-raised-button color="primary" routerLink="/gmail-schedule">
           <mat-icon>send</mat-icon>
           Send Gmail
         </button>
