--- a/frontend/src/app/pages/gmail-schedule/gmail-schedule.component.html
+++ b/frontend/src/app/pages/gmail-schedule/gmail-schedule.component.html
@@ -1,4 +1,4 @@
-<form class="complex-form" [formGroup]="gmailsendForm" (ngSubmit)="onSubmit()">
+<form class="complex-form" [formGroup]="gmailscheduleForm" (ngSubmit)="onSubmit()">
   <div class="form-title">Compose email</div>
   <input
     type="text"
@@ -37,15 +37,15 @@
       name="action"
       class="btn"
       type="submit"
-      [disabled]="!gmailsendForm.valid"
+      [disabled]="!gmailscheduleForm.valid"
     >
       Automate Email
     </button>
   </div>
   <p>From: {{ "j8977748@gmail.com" }}</p>
-  <p>To: {{ gmailsendForm.value.reciever }}</p>
-  <p>Subject: {{ gmailsendForm.value.subject }}</p>
-  <p>Content: {{ gmailsendForm.value.content }}</p>
-  <p>Date-Time: {{ gmailsendForm.value.schedule }}</p>
-  <p>Form Status: {{ gmailsendForm.status }}</p>
+  <p>To: {{ gmailscheduleForm.value.reciever }}</p>
+  <p>Subject: {{ gmailscheduleForm.value.subject }}</p>
+  <p>Content: {{ gmailscheduleForm.value.content }}</p>
+  <p>Date-Time: {{ gmailscheduleForm.value.schedule }}</p>
+  <p>Form Status: {{ gmailscheduleForm.status }}</p>
 </form>
