gmail-schedule: Update gmail-schedule to utilize new email endpoint to retrieve user email

--- a/frontend/src/app/pages/gmail-schedule/gmail-schedule.component.html
+++ b/frontend/src/app/pages/gmail-schedule/gmail-schedule.component.html
@@ -42,7 +42,7 @@
       Automate Email
     </button>
   </div>
-  <p>From: {{ "j8977748@gmail.com" }}</p>
+  <p>From: {{ gmailscheduleForm.value.sender }}</p>
   <p>To: {{ gmailscheduleForm.value.reciever }}</p>
   <p>Subject: {{ gmailscheduleForm.value.subject }}</p>
   <p>Content: {{ gmailscheduleForm.value.content }}</p>
