--- a/frontend/src/app/pages/gmail-schedule/gmail-schedule.component.css
+++ b/frontend/src/app/pages/gmail-schedule/gmail-schedule.component.css
@@ -1,50 +1,49 @@
-.complex-form {
-    margin-top: 20px;
+.automate-form {
     border-radius: 10px;
-    border: 2px #3c3d3f solid;
-    padding: 20px 10px 10px 10px;
+    border: 1px #000000 solid;
+    background-color: #5ce4cb;
+    padding: 10px 10px 10px 10px;
     display: flex;
     flex-direction: column;
+    margin-top: 10px;
   }
   
-  .complex-form .form-title {
-    font-size: 20px;
+  .automate-form .form-title {
+    font-size: 25px;
     font-weight: bold;
+    text-align: center;
+    color: white;
+    background-color: #000000;
+    border: 1px #000000 solid;
+    border-radius: 10px 10px 0px 0px;
     margin: -20px -10px 20px -10px;
     padding: 10px 0px 10px 25px;
-    color: white;
-    background-color: #3c3d3f;
-    border-radius: 7px 7px 0px 0px;
   }
   
-  .complex-form .form-radio {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-  }
-  
-  .complex-form .form-element {
+  .automate-form .form-element {
     margin-bottom: 10px;
     font-size: 20px;
     border-radius: 10px;
-    padding: 5px 10px 5px 10px;
+    padding: 5px 10px;
     border: 2px solid black;
   }
   
   .btn {
-    border-radius: 10px;
-    text-align: center;
+    background-color: #fdd522;
+    color: #000000;
+    border-radius: 25px;
     font-size: 20px;
-    color: #3c3d3f;
-    background: #ffffff;
-    border: 2px solid black;
-    padding: 10px 20px 10px 20px;
-    margin-top: 10px;
+    font-weight: bold;
+    border-width: 0px;
+    height: 65px;
+    width: 200px;
+    text-align: center;
+    padding-top: 10px;
+    margin-bottom: 10px;
   }
   
   .btn:hover {
-    background: #3c3d3f;
-    color: #ffffff;
     cursor: pointer;
+    opacity: 0.5;
   }
   
